--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -1532,3 +1532,969 @@ const merge = (head1, head2) => {
 
 ----
 
+## **BM13** **判断一个链表是否为回文结构**
+
+给你一个单链表的头节点 `head` ，请你判断该链表是否为回文链表。如果是，返回 `true` ；否则，返回 `false` 。
+
+**进阶：**你能否用 `O(n)` 时间复杂度和 `O(1)` 空间复杂度解决此题？
+
+
+
+#### 将值复制到数组中后用双指针法
+
+一共为两个步骤：
+
+1. 复制链表值到数组列表中。
+2. 使用双指针法判断是否为回文。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 the head
+ * @return bool布尔型
+ */
+function isPail( head ) {
+    // write code here
+    const nodes = [];
+    while (head !== null) {
+        nodes.push(head.val);
+        head = head.next;
+    }
+    let left = 0, right = nodes.length - 1;
+    while (left < right) {
+        if (nodes[left++] !== nodes[right--]) {
+            return false;
+        }
+    }
+    return true;
+
+}
+module.exports = {
+    isPail : isPail
+};
+```
+
+时间复杂度：O(n)O(n)，其中 nn 指的是链表的元素个数。
+第一步： 遍历链表并将值复制到数组中，O(n)O(n)。
+第二步：双指针判断是否为回文，执行了 O(n/2)O(n/2) 次的判断，即 O(n)O(n)。
+总的时间复杂度：O(2n) = O(n)O(2n)=O(n)。
+空间复杂度：O(n)O(n)，其中 nn 指的是链表的元素个数，我们使用了一个数组列表存放链表的元素值。
+
+
+
+#### 递归
+
+为了想出使用空间复杂度为 O(1)*O*(1) 的算法，你可能想过使用递归来解决，但是这仍然需要 O(n)*O*(*n*) 的空间复杂度。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 the head
+ * @return bool布尔型
+ */
+function isPail( head ) {
+    // write code here
+    let p = null;
+    const recursivelyCheck = (currentNode) => {
+        if (currentNode !== null) {
+            if (!recursivelyCheck(currentNode.next)) {
+                return false;
+            }
+            if (currentNode.val !== p.val) {
+                return false;
+            }
+            p = p.next;
+        }
+        return true;
+    }
+    p = head;
+    return recursivelyCheck(head);
+
+}
+module.exports = {
+    isPail : isPail
+};
+```
+
+这种方法不仅使用了 O(n)O(n) 的空间，且比第一种方法更差，因为在许多语言中，堆栈帧的开销很大（如 Python），并且最大的运行时堆栈深度为 1000（可以增加，但是有可能导致底层解释程序内存出错）。为每个节点创建堆栈帧极大的限制了算法能够处理的最大链表大小。
+
+
+
+#### 快慢指针
+
+避免使用 O(n)O(n) 额外空间的方法就是改变输入。
+
+我们可以将链表的后半部分反转（修改链表结构），然后将前半部分和后半部分进行比较。比较完成后我们应该将链表恢复原样。虽然不需要恢复也能通过测试用例，但是使用该函数的人通常不希望链表结构被更改。
+
+该方法虽然可以将空间复杂度降到 O(1)O(1)，但是在并发环境下，该方法也有缺点。在并发环境下，函数运行时需要锁定其他线程或进程对链表的访问，因为在函数执行过程中链表会被修改。
+
+整个流程可以分为以下五个步骤：
+
+1. 找到前半部分链表的尾节点。
+2. 反转后半部分链表。
+3. 判断是否回文。
+4. 恢复链表。
+5. 返回结果。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 the head
+ * @return bool布尔型
+ */
+function isPail( head ) {
+    if (head === null) {
+        return true;
+    }
+
+    // 找到前半部分链表的尾节点并反转后半部分链表
+    const fisrtHalfEnd = endOfFirstHalf(head);
+    const secondHalfStart = reverseList(fisrtHalfEnd.next);
+
+    // 判断是否回文
+    let p1 = head;
+    let p2 = secondHalfStart;
+    let result = true;
+    while (result && p2 !== null) {
+        if (p1.val !== p2.val) {
+            result = false;
+        }
+        p1 = p1.next;
+        p2 = p2.next;
+    }
+    // 还原链表并返回结果
+    fisrtHalfEnd.next = reverseList(secondHalfStart);
+
+    return result;
+}
+
+const reverseList = (head) => {
+    let prev = null;
+    let curr = head;
+    while (curr !== null) {
+        let next = curr.next;
+        curr.next = prev;
+        prev = curr;
+        curr = next;
+    }
+    return prev;
+}
+
+const endOfFirstHalf = (head) => {
+    let slow = head;
+    let fast = head;
+    while (fast.next !== null && fast.next.next !== null) {
+        slow = slow.next;
+        fast = fast.next.next;
+    }
+    return slow;
+}
+
+module.exports = {
+    isPail : isPail
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n)O(n)，其中 nn 指的是链表的大小。
+
+空间复杂度：O(1)O(1)。我们只会修改原本链表中节点的指向，而在堆栈上的堆栈帧不超过 O(1)O(1)。
+
+
+
+----
+
+## **BM14** **链表的奇偶重排**
+
+给定单链表的头节点 head ，将所有索引为奇数的节点和索引为偶数的节点分别组合在一起，然后返回重新排序的列表。
+
+第一个节点的索引被认为是 奇数 ， 第二个节点的索引为 偶数 ，以此类推。
+
+请注意，偶数组和奇数组内部的相对顺序应该与输入时保持一致。
+
+你必须在 O(1) 的额外空间复杂度和 O(n) 的时间复杂度下解决这个问题。
+
+#### 分离节点后合并
+
+原始链表的头节点 head 也是奇数链表的头节点以及结果链表的头节点，head 的后一个节点是偶数链表的头节点。令 evenHead = head.next，则 evenHead 是偶数链表的头节点。
+
+维护两个指针 odd 和 even 分别指向奇数节点和偶数节点，初始时 odd = head，even = evenHead。通过迭代的方式将奇数节点和偶数节点分离成两个链表，每一步首先更新奇数节点，然后更新偶数节点。
+
+更新奇数节点时，奇数节点的后一个节点需要指向偶数节点的后一个节点，因此令 odd.next = even.next，然后令 odd = odd.next，此时 odd 变成 even 的后一个节点。
+
+更新偶数节点时，偶数节点的后一个节点需要指向奇数节点的后一个节点，因此令 even.next = odd.next，然后令 even = even.next，此时 even 变成 odd 的后一个节点。
+
+在上述操作之后，即完成了对一个奇数节点和一个偶数节点的分离。重复上述操作，直到全部节点分离完毕。全部节点分离完毕的条件是 even 为空节点或者 even.next 为空节点，此时 odd 指向最后一个奇数节点（即奇数链表的最后一个节点）。
+
+最后令 odd.next = evenHead，将偶数链表连接在奇数链表之后，即完成了奇数链表和偶数链表的合并，结果链表的头节点仍然是 head。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param head ListNode类 
+ * @return ListNode类
+ */
+function oddEvenList( head ) {
+    // write code here
+    if (head === null || head.next === null) {
+        return head;
+    }
+    let odd = head;
+    let even = head.next;
+    let evenHead = head.next;
+    while (even !== null && even.next !== null) {
+        odd.next = even.next;
+        odd = odd.next;
+        even.next = odd.next;
+        even = even.next;
+    }
+    odd.next = evenHead;
+
+    return head;
+}
+module.exports = {
+    oddEvenList : oddEvenList
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n)O(n)，其中 nn 是链表的节点数。需要遍历链表中的每个节点，并更新指针。
+
+空间复杂度：O(1)O(1)。只需要维护有限的指针。
+
+
+
+----
+
+## **BM15** **删除有序链表中重复的元素-I**
+
+给定一个已排序的链表的头 `head` ， *删除所有重复的元素，使每个元素只出现一次* 。返回 *已排序的链表* 。
+
+#### 一次遍历
+
+由于给定的链表是排好序的，因此重复的元素在链表中出现的位置是连续的，因此我们只需要对链表进行一次遍历，就可以删除重复的元素。
+
+具体地，我们从指针 \textit{cur}cur 指向链表的头节点，随后开始对链表进行遍历。如果当前 \textit{cur}cur 与 \textit{cur.next}cur.next 对应的元素相同，那么我们就将 \textit{cur.next}cur.next 从链表中移除；否则说明链表中已经不存在其它与 \textit{cur}cur 对应的元素相同的节点，因此可以将 \textit{cur}cur 指向 \textit{cur.next}cur.next。
+
+当遍历完整个链表之后，我们返回链表的头节点即可。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+  * 
+  * @param head ListNode类 
+  * @return ListNode类
+  */
+function deleteDuplicates( head ) {
+    // write code here
+    if (head === null || head.next === null) {
+        return head;
+    }
+    let curr = head;
+    let prev = head;
+    while (curr.next !== null) {
+        if (curr.val === curr.next.val) {
+            curr.next = curr.next.next;
+        } else {
+            curr = curr.next;
+        }
+    }
+    return head;
+}
+module.exports = {
+    deleteDuplicates : deleteDuplicates
+};
+```
+
+
+
+----
+
+## **BM16** **删除有序链表中重复的元素-II**
+
+给定一个已排序的链表的头 `head` ， *删除原始链表中所有重复数字的节点，只留下不同的数字* 。返回 *已排序的链表* 。
+
+由于给定的链表是排好序的，因此重复的元素在链表中出现的位置是连续的，因此我们只需要对链表进行一次遍历，就可以删除重复的元素。由于链表的头节点可能会被删除，因此我们需要额外使用一个哑节点（dummy node）指向链表的头节点。
+
+具体地，我们从指针 \textit{cur}cur 指向链表的哑节点，随后开始对链表进行遍历。如果当前 \textit{cur.next}cur.next 与 \textit{cur.next.next}cur.next.next 对应的元素相同，那么我们就需要将 \textit{cur.next}cur.next 以及所有后面拥有相同元素值的链表节点全部删除。我们记下这个元素值 xx，随后不断将 \textit{cur.next}cur.next 从链表中移除，直到 \textit{cur.next}cur.next 为空节点或者其元素值不等于 xx 为止。此时，我们将链表中所有元素值为 xx 的节点全部删除。
+
+如果当前 \textit{cur.next}cur.next 与 \textit{cur.next.next}cur.next.next 对应的元素不相同，那么说明链表中只有一个元素值为 \textit{cur.next}cur.next 的节点，那么我们就可以将 \textit{cur}cur 指向 \textit{cur.next}cur.next。
+
+当遍历完整个链表之后，我们返回链表的的哑节点的下一个节点 \textit{dummy.next}dummy.next 即可。
+
+细节
+
+需要注意 \textit{cur.next}cur.next 以及 \textit{cur.next.next}cur.next.next 可能为空节点，如果不加以判断，可能会产生运行错误。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+  * 
+  * @param head ListNode类 
+  * @return ListNode类
+  */
+function deleteDuplicates( head ) {
+    // write code here
+    if (head === null || head.next === null) {
+        return head;
+    }
+    const dummyNode = new ListNode(-1);
+    dummyNode.next = head;
+
+    let curr = dummyNode;
+    
+    while (curr.next && curr.next.next) {
+        if (curr.next.val === curr.next.next.val) {
+            const x = curr.next.val;
+            while (curr.next !== null && curr.next.val === x) {
+                curr.next = curr.next.next;
+            }
+        } else {
+            curr = curr.next;
+        }
+    }
+    return dummyNode.next;
+}
+
+module.exports = {
+    deleteDuplicates : deleteDuplicates
+};
+```
+
+
+
+-----
+
+## **BM17** **二分查找-I**
+
+给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+
+二分查找的做法是，定义查找的范围 [\textit{left}, \textit{right}][left,right]，初始查找范围是整个数组。每次取查找范围的中点 \textit{mid}mid，比较 \textit{nums}[\textit{mid}]nums[mid] 和 \textit{target}target 的大小，如果相等则 \textit{mid}mid 即为要寻找的下标，如果不相等则根据 \textit{nums}[\textit{mid}]nums[mid] 和 \textit{target}target 的大小关系将查找范围缩小一半。
+
+由于每次查找都会将查找范围缩小一半，因此二分查找的时间复杂度是 O(\log n)O(logn)，其中 nn 是数组的长度。
+
+二分查找的条件是查找范围不为空，即 \textit{left} \le \textit{right}left≤right。如果 \textit{target}target 在数组中，二分查找可以保证找到 \textit{target}target，返回 \textit{target}target 在数组中的下标。如果 \textit{target}target 不在数组中，则当 \textit{left} > \textit{right}left>right 时结束查找，返回 -1−1。
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param nums int整型一维数组 
+ * @param target int整型 
+ * @return int整型
+ */
+function search( nums ,  target ) {
+    // write code here
+    let left = 0, right = nums.length - 1;
+    let mid;
+    while (left <= right) {
+        mid = left + Math.floor((right - left) / 2);
+        if (nums[mid] > target) {
+            right = mid - 1;
+        } else if (nums[mid] < target) {
+            left = mid + 1;
+        } else {
+            return mid;
+        }
+    }
+    return -1;
+}
+
+// let nums = [-1,0,3,5,9,12], target = 9;
+// console.log(search(nums, target))
+
+module.exports = {
+    search : search
+};
+```
+
+**复杂度分析**
+
+- 时间复杂度：O(\log n)*O*(log*n*)，其中 n*n* 是数组的长度。
+- 空间复杂度：O(1)*O*(1)。
+
+
+
+-----
+
+## **BM18** **二维数组中的查找**
+
+在一个 n * m 的二维数组中，每一行都按照从左到右递增的顺序排序，每一列都按照从上到下递增的顺序排序。请完成一个高效的函数，输入这样的一个二维数组和一个整数，判断数组中是否含有该整数。
+
+### 线性查找
+
+由于给定的二维数组具备每行从左到右递增以及每列从上到下递增的特点，当访问到一个元素时，可以排除数组中的部分元素。
+
+从二维数组的右上角开始查找。如果当前元素等于目标值，则返回 true。如果当前元素大于目标值，则移到左边一列。如果当前元素小于目标值，则移到下边一行。
+
+可以证明这种方法不会错过目标值。如果当前元素大于目标值，说明当前元素的下边的所有元素都一定大于目标值，因此往下查找不可能找到目标值，往左查找可能找到目标值。如果当前元素小于目标值，说明当前元素的左边的所有元素都一定小于目标值，因此往左查找不可能找到目标值，往下查找可能找到目标值。
+
+- 若数组为空，返回 false
+
+- 初始化行下标为 0，列下标为二维数组的列数减 1
+- 重复下列步骤，直到行下标或列下标超出边界
+- - 获得当前下标位置的元素 num
+  - 如果 num 和 target 相等，返回 true
+  - 如果 num 大于 target，列下标减 1
+  - 如果 num 小于 target，行下标加 1
+- 循环体执行完毕仍未找到元素等于 target ，说明不存在这样的元素，返回 false`
+
+
+
+```js
+function Find(target, array){
+    // write code here
+    if (array === null || array.length === 0 || array[0].length === 0) {
+        return false;
+    }
+    let m = array.length;
+    let n = array[0].length;
+    let row = 0;
+    let col = n - 1;
+    while (row < m && col >= 0) {
+        if (array[row][col] < target) {
+            row++;
+        } else if (array[row][col] > target) {
+            col--;
+        } else {
+            return true;
+        }
+    }
+    return false;
+}
+module.exports = {
+    Find : Find
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n+m)O(n+m)。访问到的下标的行最多增加 n 次，列最多减少 m 次，因此循环体最多执行 n + m 次。
+空间复杂度：O(1)O(1)。
+
+
+
+----
+
+## **BM19** **寻找峰值**
+
+峰值元素是指其值严格大于左右相邻值的元素。
+
+给你一个整数数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可。
+
+你可以假设 nums[-1] = nums[n] = -∞ 。
+
+你必须实现时间复杂度为 O(log n) 的算法来解决此问题。
+
+提示：
+
+1 <= nums.length <= 1000
+-231 <= nums[i] <= 231 - 1
+对于所有有效的 i 都有 nums[i] != nums[i + 1]
+
+#### 寻找最大值
+
+由于题目保证了 \textit{nums}[i] \neq \textit{nums}[i+1]nums[i]  =nums[i+1]，那么数组 \textit{nums}nums 中最大值两侧的元素一定严格小于最大值本身。因此，最大值所在的位置就是一个可行的峰值位置。
+
+我们对数组 \textit{nums}nums 进行一次遍历，找到最大值对应的位置即可。
+
+```js
+var findPeakElement = function(nums) {
+    let idx = 0;
+    for (let i = 1; i < nums.length; ++i) {
+        if (nums[i] > nums[idx]) {
+            idx = i;
+        }
+    }
+    return idx;
+};
+
+```
+
+
+
+#### 迭代爬坡
+
+俗话说「人往高处走，水往低处流」。如果我们从一个位置开始，不断地向高处走，那么最终一定可以到达一个峰值位置。
+
+因此，我们首先在 [0, n)[0,n) 的范围内随机一个初始位置 ii，随后根据nums[i−1],nums[i],nums[i+1] 三者的关系决定向哪个方向走：
+
+如果 nums[i−1]<nums[i]>nums[i+1]，那么位置 ii 就是峰值位置，我们可以直接返回 ii 作为答案；
+
+如果nums[i−1]<nums[i]<nums[i+1]，那么位置 ii 处于上坡，我们需要往右走，即 i \leftarrow i+1i←i+1；
+
+如果nums[i−1]>nums[i]>nums[i+1]，那么位置 ii 处于下坡，我们需要往左走，即 i \leftarrow i-1i←i−1；
+
+如果nums[i−1]>nums[i]<nums[i+1]，那么位置 ii 位于山谷，两侧都是上坡，我们可以朝任意方向走。
+
+如果我们规定对于最后一种情况往右走，那么当位置 ii 不是峰值位置时：
+
+如果nums[i]<nums[i+1]，那么我们往右走；
+
+如果 nums[i]>nums[i+1]，那么我们往左走。
+
+```js
+var findPeakElement = function(nums) {
+    const n = nums.length;
+    let idx = parseInt(Math.random() * n);
+
+    while (!(compare(nums, idx - 1, idx) < 0 && compare(nums, idx, idx + 1) > 0)) {
+        if (compare(nums, idx, idx + 1) < 0) {
+            idx += 1;
+        } else {
+            idx -= 1;
+        }
+    }
+    
+    return idx;
+}
+
+// 辅助函数，输入下标 i，返回一个二元组 (0/1, nums[i])
+// 方便处理 nums[-1] 以及 nums[n] 的边界情况
+const get = (nums, idx) => {
+    if (idx === -1 || idx === nums.length) {
+        return [0, 0];
+    }
+    return [1, nums[idx]];
+}
+
+const compare = (nums, idx1, idx2) => {
+    const num1 = get(nums, idx1);
+    const num2 = get(nums, idx2);
+    if (num1[0] !== num2[0]) {
+        return num1[0] > num2[0] ? 1 : -1;
+    }
+    if (num1[1] === num2[1]) {
+        return 0;
+    }
+    return num1[1] > num2[1] ? 1 : -1;
+}
+
+
+```
+
+
+
+#### 二分查找优化
+
+我们可以发现，如果 nums[i]<nums[i+1]，并且我们从位置 ii 向右走到了位置 i+1i+1，那么位置 ii 左侧的所有位置是不可能在后续的迭代中走到的。
+
+这是因为我们每次向左或向右移动一个位置，要想「折返」到位置 ii 以及其左侧的位置，我们首先需要在位置 i+1i+1 向左走到位置 ii，但这是不可能的。
+
+并且根据方法二，我们知道位置 i+1i+1 以及其右侧的位置中一定有一个峰值，因此我们可以设计出如下的一个算法：
+
+对于当前可行的下标范围 [l, r][l,r]，我们随机一个下标 ii；
+
+如果下标 ii 是峰值，我们返回 ii 作为答案；
+
+如果nums[i]<nums[i+1]，那么我们抛弃 [l, i][l,i] 的范围，在剩余 [i+1, r][i+1,r] 的范围内继续随机选取下标；
+
+如果 nums[i]>nums[i+1]，那么我们抛弃 [i, r][i,r] 的范围，在剩余 [l, i-1][l,i−1] 的范围内继续随机选取下标。
+
+在上述算法中，如果我们固定选取 ii 为 [l, r][l,r] 的中点，那么每次可行的下标范围会减少一半，成为一个类似二分查找的方法，时间复杂度为 O(\log n)O(logn)。
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param nums int整型一维数组 
+ * @return int整型
+ */
+function findPeakElement( nums ) {
+    // write code here
+    const n = nums.length;
+    let left =0, right = n - 1;
+    let ans = -1;
+    while (left <= right) {
+        const mid = left + Math.floor((right - left) / 2);
+        if (compare(nums, mid - 1, mid) < 0 && compare(nums, mid, mid + 1) > 0) {
+            ans = mid;
+            break;
+        }
+        if (compare(nums, mid, mid + 1) < 0) {
+            left = mid + 1;
+        } else {
+            right = mid - 1;
+        }
+    }
+    return ans;
+}
+
+// 辅助函数，输入下标 i，返回一个二元组 (0/1, nums[i])
+// 方便处理 nums[-1] 以及 nums[n] 的边界情况
+const get = (nums, idx) => {
+    if (idx === -1 || idx === nums.length) {
+        return[0, 0];
+    }
+    return [1, nums[idx]];
+}
+
+const compare = (nums, idx1, idx2) => {
+    const num1 = get(nums, idx1);
+    const num2 = get(nums, idx2);
+    if (num1[0] !== num2[0]) {
+        return num1[0] > num2[0] ? 1 : -1;
+    }
+    if (num1[1] === num2[1]) {
+        return 0;
+    }
+    return num1[1] > num2[1] ? 1 : -1;
+}
+
+module.exports = {
+    findPeakElement : findPeakElement
+};
+```
+
+**复杂度分析**
+
+- 时间复杂度：O(\log n)*O*(log*n*)，其中 n*n* 是数组 \textit{nums}*nums* 的长度。
+- 空间复杂度：O(1)*O*(1)。
+
+
+
+----
+
+## **BM20** **数组中的逆序对**
+
+在数组中的两个数字，如果前面一个数字大于后面的数字，则这两个数字组成一个逆序对。输入一个数组，求出这个数组中的逆序对的总数P。
+
+并将P对1000000007取模的结果输出。 即输出P mod 1000000007
+
+要求：空间复杂度 O(n)，时间复杂度 O(nlogn)
+
+
+
+#### 归并排序
+
+![求逆序对](E:\pogject\学习笔记\image\niuke\求逆序对.png)
+
+```js
+function InversePairs(nums){
+    // write code here
+    const n = nums.length;
+    if (n < 2) {
+        return 0;
+    }
+    const copy = [...nums];
+    const temp = new Array(n);
+    const ans = dfs(copy, 0, n - 1, temp);
+    const MOD = 1000000007;
+    return ans % MOD;
+}
+
+const dfs = (nums, left, right, temp) => {
+    if (left === right) {
+        return 0;
+    }
+    let mid = left + Math.floor((right - left) / 2);
+    let leftPairs = dfs(nums, left, mid, temp);
+    let rightPairs = dfs(nums, mid + 1, right, temp);
+
+    if (nums[mid] <= nums[mid + 1]) {
+        return leftPairs + rightPairs;
+    }
+
+    let crossPairs = mergeAndCount(nums, left, mid, right, temp);
+    return leftPairs + rightPairs + crossPairs;
+}
+
+const mergeAndCount = (nums, left, mid, right, temp) => {
+    for (let i = left; i <= right; i++) {
+        temp[i] = nums[i];
+    }
+    let i = left;
+    let j = mid + 1;
+    let count = 0;
+    for (let k = left; k <= right; k++) {
+        if (i === mid + 1) {
+            nums[k] = temp[j];
+            j++;
+        } else if (j === right + 1) {
+            nums[k] = temp[i];
+            i++;
+        } else if (temp[i] <= temp[j]) {
+            nums[k] = temp[i];
+            i++;
+        } else {
+            nums[k] = temp[j];
+            j++;
+            count += (mid - i + 1);
+        }
+    }
+    return count;
+}
+
+// let nums = [1,2,3,4,5,6,7,0];
+// console.log(InversePairs(nums));
+
+module.exports = {
+    InversePairs : InversePairs
+};
+```
+
+
+
+----
+
+## **BM21** **旋转数组的最小数字**
+
+把一个数组最开始的若干个元素搬到数组的末尾，我们称之为数组的旋转。
+
+给你一个可能存在 重复 元素值的数组 numbers ，它原来是一个升序排列的数组，并按上述情形进行了一次旋转。请返回旋转数组的最小元素。例如，数组 [3,4,5,1,2] 为 [1,2,3,4,5] 的一次旋转，该数组的最小值为 1。  
+
+注意，数组 [a[0], a[1], a[2], ..., a[n-1]] 旋转一次 的结果为数组 [a[n-1], a[0], a[1], a[2], ..., a[n-2]] 。
+
+ 
+
+提示：
+
+n == numbers.length
+1 <= n <= 5000
+-5000 <= numbers[i] <= 5000
+numbers 原来是一个升序排序的数组，并进行了 1 至 n 次旋转
+
+要求：空间复杂度：O(1)*O*(1) ，时间复杂度：O(logn)*O*(*l**o**g**n*)
+
+
+
+#### 二分查找
+
+我们考虑数组中的最后一个元素 xx：在最小值右侧的元素，它们的值一定都小于等于 xx；而在最小值左侧的元素，它们的值一定都大于等于 xx。因此，我们可以根据这一条性质，通过二分查找的方法找出最小值。
+
+```js
+function minNumberInRotateArray(nums)
+{
+    // write code here
+    let low = 0;
+    let high = nums.length - 1;
+    while (low < high) {
+        let mid = low + Math.floor((high - low) / 2);
+        if (nums[mid] < nums[high]) {
+            high = mid;
+        } else if (nums[mid] > nums[high]) {
+            low = mid + 1;
+        } else {
+            high -= 1;
+        }
+    }
+    return nums[low];
+}
+module.exports = {
+    minNumberInRotateArray : minNumberInRotateArray
+};
+```
+
+时间复杂度：平均时间复杂度为 O(\log n)O(logn)，其中 nn 是数组 \it numbersnumbers 的长度。如果数组是随机生成的，那么数组中包含相同元素的概率很低，在二分查找的过程中，大部分情况都会忽略一半的区间。而在最坏情况下，如果数组中的元素完全相同，那么 \texttt{while}while 循环就需要执行 nn 次，每次忽略区间的右端点，时间复杂度为 O(n)O(n)。
+
+空间复杂度：O(1)O(1)。
+
+
+
+```js
+/**
+ * @param {number[]} numbers
+ * @return {number}
+ */
+var minArray = function(numbers) {
+    let n = numbers.length;
+    let left = 0;
+    let right = n - 1;
+    let mid = 0;
+    while(numbers[left] >= numbers[right]) {
+        if (right - left === 1) {
+            mid = right;
+            break;
+        }
+        mid = left + Math.floor((right - left) / 2);
+        // 如果left,right, mid指向的三个数字相等，只能顺序查找
+        if (numbers[left] === numbers[right] && numbers[left] === numbers[mid]) {
+            return minInOrder(numbers, left, right);
+        }
+
+        if (numbers[mid] >= numbers[left]) {
+            left = mid;
+        } else if (numbers[mid] <= numbers[right]) {
+            right = mid;
+        }
+    }
+    return numbers[mid];
+}
+
+const minInOrder = (numbers, left, right) => {
+    let result = numbers[left];
+    for (let i = left + 1; i <= right; ++i) {
+        if (result > numbers[i]) {
+            result = numbers[i];
+        }
+    }
+    return result;
+}
+
+let numbers = [1, 0, 1, 1, 1];
+// let numbers = [3, 4, 5, 1, 2];
+console.log(minArray(numbers, 5));
+```
+
+
+
+----
+
+## **BM22** **比较版本号**
+
+给你两个版本号 version1 和 version2 ，请你比较它们。
+
+版本号由一个或多个修订号组成，各修订号由一个 '.' 连接。每个修订号由 多位数字 组成，可能包含 前导零 。每个版本号至少包含一个字符。修订号从左到右编号，下标从 0 开始，最左边的修订号下标为 0 ，下一个修订号下标为 1 ，以此类推。例如，2.5.33 和 0.1 都是有效的版本号。
+
+比较版本号时，请按从左到右的顺序依次比较它们的修订号。比较修订号时，只需比较 忽略任何前导零后的整数值 。也就是说，修订号 1 和修订号 001 相等 。如果版本号没有指定某个下标处的修订号，则该修订号视为 0 。例如，版本 1.0 小于版本 1.1 ，因为它们下标为 0 的修订号相同，而下标为 1 的修订号分别为 0 和 1 ，0 < 1 。
+
+返回规则如下：
+
+如果 version1 > version2 返回 1，
+如果 version1 < version2 返回 -1，
+除此之外返回 0。
+
+提示：
+
+1 <= version1.length, version2.length <= 500
+version1 和 version2 仅包含数字和 '.'
+version1 和 version2 都是 有效版本号
+version1 和 version2 的所有修订号都可以存储在 32 位整数 中
+
+#### 字符串分割
+
+我们可以将版本号按照点号分割成修订号，然后从左到右比较两个版本号的相同下标的修订号。在比较修订号时，需要将字符串转换成整数进行比较。注意根据题目要求，如果版本号不存在某个下标处的修订号，则该修订号视为 0。
+
+```js
+/**
+ * @param {string} version1
+ * @param {string} version2
+ * @return {number}
+ */
+var compareVersion = function(version1, version2) {
+	const v1 = version1.split(".");
+	const v2 = version2.split(".");
+	for (let i = 0; i < v1.length || i < v2.length; i++) {
+		let x = 0, y = 0;
+		if (i < v1.length) {
+			x = parseInt(v1[i]);
+		}
+		if (i < v2.length) {
+			y = parseInt(v2[i]);
+		}
+		if (x > y) {
+			return 1;
+		}
+		if (x < y) {
+			return -1;
+		}
+	}
+	return 0;
+};
+
+let version1 = "1.01", version2 = "1.001";
+console.log(compareVersion(version1, version2));
+```
+
+时间复杂度：O(n+m)O(n+m)（或 O(\max(n,m))O(max(n,m))，这是等价的），其中 nn 是字符串 \textit{version1}version1 的长度，mm 是字符串 \textit{version2}version2 的长度。
+
+空间复杂度：O(n+m)O(n+m)，我们需要 O(n+m)O(n+m) 的空间存储分割后的修订号列表。
+
+
+
+#### 双指针
+
+方法一需要存储分割后的修订号，为了优化空间复杂度，我们可以在分割版本号的同时解析出修订号进行比较。
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 比较版本号
+ * @param version1 string字符串 
+ * @param version2 string字符串 
+ * @return int整型
+ */
+function compare( version1 ,  version2 ) {
+    // write code here
+    const n = version1.length, m = version2.length;
+    let i = 0, j = 0;
+    while (i < n || j < m) {
+        let x = 0;
+        for (; i < n && version1[i] !== "."; i++) {
+            x = x * 10 + version1[i].charCodeAt() - '0'.charCodeAt();
+        }
+        ++i;  // 跳过点号
+        let y = 0;
+        for (; j < m && version2[j] !== "."; j++) {
+            y = y * 10 + version2[j].charCodeAt() - '0'.charCodeAt();
+        }
+        ++j;  // 跳过点号
+        if (x !== y) {
+            return x > y ? 1 : -1;
+        }
+    }
+    return 0;
+}
+
+module.exports = {
+    compare : compare
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n+m)O(n+m)，其中 nn 是字符串 \textit{version1}version1 的长度，mm 是字符串 \textit{version2}version2 的长度。
+
+空间复杂度：O(1)O(1)，我们只需要常数的空间保存若干变量。
+
+
+
+----
+
+## **BM23** **二叉树的前序遍历**
