--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3209,6 +3209,48 @@ console.log(result);
 
 
 
+-----
+
+## 82. 删除排序链表中的重复元素 II
+
+给定一个已排序的链表的头 `head` ， *删除原始链表中所有重复数字的节点，只留下不同的数字* 。返回 *已排序的链表* 。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var deleteDuplicates = function(head) {
+	if (head === null || head.next === null) {
+     return head;
+  }
+	const dummyNode = new ListNode(-1, head);
+
+	let curr = dummyNode;
+	
+	while (curr.next && curr.next.next) {
+		if (curr.next.val === curr.next.next.val) {
+			const x = curr.next.val;
+			while (curr.next !== null && curr.next.val === x) {
+				curr.next = curr.next.next;
+			}
+		} else {
+			curr = curr.next;
+		}
+	}
+	return dummyNode.next;
+};
+```
+
+
+
 
 ---
 ## 83.删除排序链表中的重复元素
@@ -5186,6 +5228,122 @@ var getIntersectionNode = function(headA, headB) {
 
 
 ---
+## 162. 寻找峰值
+
+峰值元素是指其值严格大于左右相邻值的元素。
+
+给你一个整数数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可。
+
+你可以假设 nums[-1] = nums[n] = -∞ 。
+
+你必须实现时间复杂度为 O(log n) 的算法来解决此问题。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var findPeakElement = function(nums) {
+    // write code here
+    const n = nums.length;
+    let left =0, right = n - 1;
+    let ans = -1;
+    while (left <= right) {
+        const mid = left + Math.floor((right - left) / 2);
+        if (compare(nums, mid - 1, mid) < 0 && compare(nums, mid, mid + 1) > 0) {
+            ans = mid;
+            break;
+        }
+        if (compare(nums, mid, mid + 1) < 0) {
+            left = mid + 1;
+        } else {
+            right = mid - 1;
+        }
+    }
+    return ans;
+}
+
+// 辅助函数，输入下标 i，返回一个二元组 (0/1, nums[i])
+// 方便处理 nums[-1] 以及 nums[n] 的边界情况
+const get = (nums, idx) => {
+    if (idx === -1 || idx === nums.length) {
+        return[0, 0];
+    }
+    return [1, nums[idx]];
+}
+
+const compare = (nums, idx1, idx2) => {
+    const num1 = get(nums, idx1);
+    const num2 = get(nums, idx2);
+    if (num1[0] !== num2[0]) {
+        return num1[0] > num2[0] ? 1 : -1;
+    }
+    if (num1[1] === num2[1]) {
+        return 0;
+    }
+    return num1[1] > num2[1] ? 1 : -1;
+}
+```
+
+
+
+----
+
+## 165. 比较版本号
+
+给你两个版本号 version1 和 version2 ，请你比较它们。
+
+版本号由一个或多个修订号组成，各修订号由一个 '.' 连接。每个修订号由 多位数字 组成，可能包含 前导零 。每个版本号至少包含一个字符。修订号从左到右编号，下标从 0 开始，最左边的修订号下标为 0 ，下一个修订号下标为 1 ，以此类推。例如，2.5.33 和 0.1 都是有效的版本号。
+
+比较版本号时，请按从左到右的顺序依次比较它们的修订号。比较修订号时，只需比较 忽略任何前导零后的整数值 。也就是说，修订号 1 和修订号 001 相等 。如果版本号没有指定某个下标处的修订号，则该修订号视为 0 。例如，版本 1.0 小于版本 1.1 ，因为它们下标为 0 的修订号相同，而下标为 1 的修订号分别为 0 和 1 ，0 < 1 。
+
+返回规则如下：
+
+如果 version1 > version2 返回 1，
+如果 version1 < version2 返回 -1，
+除此之外返回 0。
+
+
+
+
+```js
+/**
+ * @param {string} version1
+ * @param {string} version2
+ * @return {number}
+ */
+var compareVersion = function(version1, version2) {
+    // write code here
+    const n = version1.length, m = version2.length;
+    let i = 0, j = 0;
+    while (i < n || j < m) {
+        let x = 0;
+        for (; i < n && version1[i] !== "."; i++) {
+            x = x * 10 + version1[i].charCodeAt() - '0'.charCodeAt();
+        }
+        ++i;  // 跳过点号
+        let y = 0;
+        for (; j < m && version2[j] !== "."; j++) {
+            y = y * 10 + version2[j].charCodeAt() - '0'.charCodeAt();
+        }
+        ++j;  // 跳过点号
+        if (x !== y) {
+            return x > y ? 1 : -1;
+        }
+    }
+    return 0;
+};
+
+let version1 = "1.01", version2 = "1.001";
+console.log(compareVersion(version1, version2));
+```
+
+
+
+----
+
 ## 168. Excel表列名称
 
 给你一个整数 columnNumber ，返回它在 Excel 表中相对应的列名称。
@@ -7662,6 +7820,53 @@ console.log(result);
 
 
 ---
+## 328. 奇偶链表
+
+给定单链表的头节点 head ，将所有索引为奇数的节点和索引为偶数的节点分别组合在一起，然后返回重新排序的列表。
+
+第一个节点的索引被认为是 奇数 ， 第二个节点的索引为 偶数 ，以此类推。
+
+请注意，偶数组和奇数组内部的相对顺序应该与输入时保持一致。
+
+你必须在 O(1) 的额外空间复杂度和 O(n) 的时间复杂度下解决这个问题。
+
+
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var oddEvenList = function(head) {
+	if (head === null || head.next === null) {
+		return head;
+	}
+	let odd = head;
+	let even = head.next;
+	let evenHead = head.next;
+	while (even !== null && even.next !== null) {
+		odd.next = even.next;
+		odd = odd.next;
+		even.next = odd.next;
+		even = even.next;
+	}
+	odd.next = evenHead;
+
+	return head;
+};
+```
+
+
+
+----
+
 ## 334.递增的三元子序列
 
 给你一个整数数组 nums ，判断这个数组中是否存在长度为 3 的递增子序列。
@@ -15499,6 +15704,37 @@ var fallingSquares = function(positions) {
     return heights;
 };
 
+```
+
+
+
+----
+
+## 704. 二分查找
+
+给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var search = function(nums, target) {
+    let left = 0, right = nums.length - 1;
+    let mid;
+    while (left <= right) {
+        mid = left + Math.floor((right - left) / 2);
+        if (nums[mid] > target) {
+            right = mid - 1;
+        } else if (nums[mid] < target) {
+            left = mid + 1;
+        } else {
+            return mid;
+        }
+    }
+    return -1;
+};
 ```
 
 
