--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1251,3 +1251,44 @@ new Promise((resolve, reject) => {
 
 ----
 
+## 8.25 奇安信笔试
+
+```js
+async function foo() {
+  console.log(2);
+  console.log(await Promise.resolve(8));
+  console.log(9); 
+  console.log(await Promise.resolve(18));
+  console.log(19);
+}
+async function bar() {
+  console.log(4);
+  console.log(await 6);
+  console.log(7);
+}
+
+console.log(1);
+
+foo();
+
+console.log(3);
+
+bar();
+
+console.log(5);
+
+// 1 2 3 4 5 8 9 6 7 18 19 
+```
+
+
+
+
+
+有n个结点构成的有向图
+
+计算结点0到结点n的路径数
+
+```
+[[1, 2, 3], [3], [3], [4], []]
+```
+
