--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -2498,3 +2498,691 @@ module.exports = {
 ----
 
 ## **BM23** **二叉树的前序遍历**
+
+
+
+
+
+----
+
+## **BM42** **用两个栈实现队列**
+
+请你仅使用两个栈实现先入先出队列。队列应当支持一般队列支持的所有操作（push、pop、peek、empty）：
+
+实现 MyQueue 类：
+
+void push(int x) 将元素 x 推到队列的末尾
+int pop() 从队列的开头移除并返回元素
+int peek() 返回队列开头的元素
+boolean empty() 如果队列为空，返回 true ；否则，返回 false
+说明：
+
+你 只能 使用标准的栈操作 —— 也就是只有 push to top, peek/pop from top, size, 和 is empty 操作是合法的。
+你所使用的语言也许不支持栈。你可以使用 list 或者 deque（双端队列）来模拟一个栈，只要是标准的栈操作即可。
+
+要求：存储n个元素的空间复杂度为 O(n)*O*(*n*) ，插入与删除的时间复杂度都是 O(1)*O*(1)
+
+```js
+var MyQueue = function() {
+    this.inStack = [];
+    this.outStack = [];
+};
+
+MyQueue.prototype.push = function(x) {
+    this.inStack.push(x);
+};
+
+MyQueue.prototype.pop = function() {
+    if (!this.outStack.length) {
+        this.in2out();
+    }
+    return this.outStack.pop();
+};
+
+MyQueue.prototype.peek = function() {
+    if (!this.outStack.length) {
+        this.in2out();
+    }
+    return this.outStack[this.outStack.length - 1];
+};
+
+MyQueue.prototype.empty = function() {
+    return this.outStack.length === 0 && this.inStack.length === 0;
+};
+
+MyQueue.prototype.in2out = function() {
+    while (this.inStack.length) {
+        this.outStack.push(this.inStack.pop());
+    }
+};
+
+
+```
+
+
+
+----
+
+## **BM43** **包含min函数的栈**
+
+设计一个支持 push ，pop ，top 操作，并能在常数时间内检索到最小元素的栈。
+
+实现 MinStack 类:
+
+MinStack() 初始化堆栈对象。
+void push(int val) 将元素val推入堆栈。
+void pop() 删除堆栈顶部的元素。
+int top() 获取堆栈顶部的元素。
+int getMin() 获取堆栈中的最小元素。
+
+#### 辅助栈
+
+按照上面的思路，我们只需要设计一个数据结构，使得每个元素 a 与其相应的最小值 m 时刻保持一一对应。因此我们可以使用一个辅助栈，与元素栈同步插入与删除，用于存储与每个元素对应的最小值。
+
+当一个元素要入栈时，我们取当前辅助栈的栈顶存储的最小值，与当前元素比较得出最小值，将这个最小值插入辅助栈中；
+
+当一个元素要出栈时，我们把辅助栈的栈顶元素也一并弹出；
+
+在任意一个时刻，栈内元素的最小值就存储在辅助栈的栈顶元素中。
+
+```js
+var MinStack = function() {
+    this.x_stack = [];
+    this.min_stack = [Infinity];
+};
+
+MinStack.prototype.push = function(x) {
+    this.x_stack.push(x);
+    this.min_stack.push(Math.min(this.min_stack[this.min_stack.length - 1], x));
+};
+
+MinStack.prototype.pop = function() {
+    this.x_stack.pop();
+    this.min_stack.pop();
+};
+
+MinStack.prototype.top = function() {
+    return this.x_stack[this.x_stack.length - 1];
+};
+
+MinStack.prototype.getMin = function() {
+    return this.min_stack[this.min_stack.length - 1];
+};
+
+```
+
+
+
+----
+
+## **BM44** **有效括号序列**
+
+给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。
+
+有效字符串需满足：
+
+左括号必须用相同类型的右括号闭合。
+左括号必须以正确的顺序闭合。
+
+#### 栈
+
+判断括号的有效性可以使用「栈」这一数据结构来解决。
+
+我们遍历给定的字符串 ss。当我们遇到一个左括号时，我们会期望在后续的遍历中，有一个相同类型的右括号将其闭合。由于后遇到的左括号要先闭合，因此我们可以将这个左括号放入栈顶。
+
+当我们遇到一个右括号时，我们需要将一个相同类型的左括号闭合。此时，我们可以取出栈顶的左括号并判断它们是否是相同类型的括号。如果不是相同的类型，或者栈中并没有左括号，那么字符串 ss 无效，返回 \text{False}False。为了快速判断括号的类型，我们可以使用哈希表存储每一种括号。哈希表的键为右括号，值为相同类型的左括号。
+
+在遍历结束后，如果栈中没有左括号，说明我们将字符串 ss 中的所有左括号闭合，返回 \text{True}True，否则返回 \text{False}False。
+
+注意到有效字符串的长度一定为偶数，因此如果字符串的长度为奇数，我们可以直接返回 \text{False}False，省去后续的遍历判断过程。
+
+```js
+var isValid = function(s) {
+    const n = s.length;
+    if (n % 2 === 1) {
+        return false;
+    }
+    const pairs = new Map([
+        [')', '('],
+        [']', '['],
+        ['}', '{']
+    ]);
+    const stk = [];
+    for (let ch of s){
+        if (pairs.has(ch)) {
+            if (!stk.length || stk[stk.length - 1] !== pairs.get(ch)) {
+                return false;
+            }
+            stk.pop();
+        } 
+        else {
+            stk.push(ch);
+        }
+    };
+    return !stk.length;
+};
+
+```
+
+复杂度分析
+
+时间复杂度：O(n)O(n)，其中 nn 是字符串 ss 的长度。
+
+空间复杂度：O(n + |\Sigma|)O(n+∣Σ∣)，其中 \SigmaΣ 表示字符集，本题中字符串只包含 66 种括号，|\Sigma| = 6∣Σ∣=6。栈中的字符数量为 O(n)O(n)，而哈希表使用的空间为 O(|\Sigma|)O(∣Σ∣)，相加即可得到总空间复杂度。
+
+
+
+#### 用repace方法
+
+第一种：用repace方法，闭合才有效，也就是最里边的也要闭合，那就把最里边的括号取代为空
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isValid = function(s) {
+    while(s.length){
+        let len = s.length;
+        // s = s.replace(/\(\)/g, "");
+        // s = s.replace(/\[\]/g, "");
+        // s = s.replace(/\{\}/g, "");
+        s = s.replace(/\(\)|\[\]|\{\}/g, "");
+        
+        if (len === s.length) {
+            // 没有匹配到则无效
+            // console.log(s)
+            return false;
+        }
+    }
+    console.log(s)
+    return true;
+};
+
+let s = "(()[[]]{[]()[]})";
+console.log(isValid(s));
+```
+
+
+
+----
+
+## **BM45** **滑动窗口的最大值**
+
+给你一个整数数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位。
+
+返回 滑动窗口中的最大值 。
+
+
+
+#### **双端队列**
+
+我们可以顺着方法一的思路继续进行优化。
+
+由于我们需要求出的是滑动窗口的最大值，如果当前的滑动窗口中有两个下标 ii 和 jj，其中 ii 在 jj 的左侧（i < ji<j），并且 ii 对应的元素不大于 jj 对应的元素（\textit{nums}[i] \leq \textit{nums}[j]nums[i]≤nums[j]），那么会发生什么呢？
+
+当滑动窗口向右移动时，只要 ii 还在窗口中，那么 jj 一定也还在窗口中，这是 ii 在 jj 的左侧所保证的。因此，由于 \textit{nums}[j]nums[j] 的存在，\textit{nums}[i]nums[i] 一定不会是滑动窗口中的最大值了，我们可以将 \textit{nums}[i]nums[i] 永久地移除。
+
+因此我们可以使用一个队列存储所有还没有被移除的下标。在队列中，这些下标按照从小到大的顺序被存储，并且它们在数组 \textit{nums}nums 中对应的值是严格单调递减的。因为如果队列中有两个相邻的下标，它们对应的值相等或者递增，那么令前者为 ii，后者为 jj，就对应了上面所说的情况，即 \textit{nums}[i]nums[i] 会被移除，这就产生了矛盾。
+
+当滑动窗口向右移动时，我们需要把一个新的元素放入队列中。为了保持队列的性质，我们会不断地将新的元素与队尾的元素相比较，如果前者大于等于后者，那么队尾的元素就可以被永久地移除，我们将其弹出队列。我们需要不断地进行此项操作，直到队列为空或者新的元素小于队尾的元素。
+
+由于队列中下标对应的元素是严格单调递减的，因此此时队首下标对应的元素就是滑动窗口中的最大值。但与方法一中相同的是，此时的最大值可能在滑动窗口左边界的左侧，并且随着窗口向右移动，它永远不可能出现在滑动窗口中了。因此我们还需要不断从队首弹出元素，直到队首元素在窗口中为止。
+
+为了可以同时弹出队首和队尾的元素，我们需要使用双端队列。满足这种单调性的双端队列一般称作「单调队列」。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number[]}
+ */
+var maxSlidingWindow = function(nums, k) {
+    const ans = [];
+    const queue = [];
+    const n = nums.length;
+    for (let i = 0; i < k; i++) {
+        while (queue.length && nums[i] >= nums[queue[queue.length - 1]]) {
+            queue.pop();
+        }
+        queue.push(i);
+    }
+    ans.push(nums[queue[0]]);
+    for (let i = k; i < n; i++) {
+        /*为了保持队列的性质，我们会不断地将新的元素与队尾的元素相比较，如果前者大于等于后者，
+        那么队尾的元素就可以被永久地移除，我们将其弹出队列。我们需要不断地进行此项操作，直到队列为空或者新的元素小于队尾的元素。*/
+        while (queue.length && nums[i] >= nums[queue[queue.length - 1]]) {
+            queue.pop();
+        }
+        // 当滑动窗口向右移动时，我们需要把一个新的元素放入队列中
+        queue.push(i);
+        /* 但与方法一中相同的是，此时的最大值可能在滑动窗口左边界的左侧，并且随着窗口向右移动，
+        它永远不可能出现在滑动窗口中了。因此我们还需要不断从队首弹出元素，直到队首元素在窗口中为止。*/
+        while (queue[0] <= i - k) {
+            queue.shift();
+        }
+        // 由于队列中下标对应的元素是严格单调递减的，因此此时队首下标对应的元素就是滑动窗口中的最大值。
+        ans.push(nums[queue[0]]);
+    }
+    return ans;
+};
+
+let nums = [1,3,-1,-3,5,3,6,7], k = 3;
+console.log(maxSlidingWindow(nums, k));
+```
+
+复杂度分析
+
+时间复杂度：O(n)O(n)，其中 nn 是数组 \textit{nums}nums 的长度。每一个下标恰好被放入队列一次，并且最多被弹出队列一次，因此时间复杂度为 O(n)O(n)。
+
+空间复杂度：O(k)O(k)。与方法一不同的是，在方法二中我们使用的数据结构是双向的，因此「不断从队首弹出元素」保证了队列中最多不会有超过 k+1k+1 个元素，因此队列使用的空间为 O(k)O(k)。
+
+
+
+#### 分块 + 预处理
+
+
+
+```js
+function maxInWindows(nums, k)
+{
+    // write code here
+    const n = nums.length;
+    const prefixMax = new Array(n).fill(0);
+    const suffixMax = new Array(n).fill(0);
+
+    for (let i = 0; i < n; i++) {
+    	if (i % k === 0) {
+    		prefixMax[i] = nums[i];
+    	} else {
+    		prefixMax[i] = Math.max(prefixMax[i - 1], nums[i]);
+    	}
+    }
+    for (let i = n - 1; i >= 0; i--) {
+    	if (i === n || (i + 1) % k === 0) {
+    		suffixMax[i] = nums[i];
+    	} else {
+    		suffixMax[i] = Math.max(suffixMax[i + 1], nums[i]);
+    	}
+    }
+
+    const ans = [];
+    for (let i = 0; i < n - k + 1; i++) {
+    	ans.push(Math.max(suffixMax[i], prefixMax[i + k - 1]));
+    }
+    return ans;
+}
+module.exports = {
+    maxInWindows : maxInWindows
+};
+```
+
+
+
+----
+
+## **BM46** **最小的K个数**
+
+输入整数数组 `arr` ，找出其中最小的 `k` 个数。例如，输入4、5、1、6、2、7、3、8这8个数字，则最小的4个数字是1、2、3、4。
+
+#### 排序
+
+
+
+```js
+/**
+ * @param {number[]} arr
+ * @param {number} k
+ * @return {number[]}
+ */
+var getLeastNumbers = function(arr, k) {
+    if (k === 0 || arr.length === 0) {
+        return [];
+    }
+    arr.sort((a, b) => a - b);
+    return arr.slice(0, k);
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n\log n)O(nlogn)，其中 nn 是数组 arr 的长度。算法的时间复杂度即排序的时间复杂度。
+
+空间复杂度：O(\log n)O(logn)，排序所需额外的空间复杂度为 O(\log n)O(logn)。
+
+
+
+#### 堆
+
+我们用一个大根堆实时维护数组的前 kk 小值。首先将前 kk 个数插入大根堆中，随后从第 k+1k+1 个数开始遍历，如果当前遍历到的数比大根堆的堆顶的数要小，就把堆顶的数弹出，再插入当前遍历到的数。最后将大根堆里的数存入数组返回即可。在下面的代码中，由于 C++ 语言中的堆（即优先队列）为大根堆，我们可以这么做。而 Python 语言中的堆为小根堆，因此我们要对数组中所有的数取其相反数，才能使用小根堆维护前 kk 小值。
+
+```js
+/**
+ * @param {number[]} arr
+ * @param {number} k
+ * @return {number[]}
+ */
+var getLeastNumbers = function(arr, k) {
+    if (k === 0 || arr.length === 0) {
+        return [];
+    }
+
+    let maxHeap = [Infinity];  // 最大堆
+    let n = arr.length;
+    for (let i = 0; i < n; i++) {
+        let item = arr[i];
+        if (maxHeap.length - 1 < k) {
+            // 构造最大堆
+            insert(item, maxHeap);
+        } else {
+            // 如果当前元素比最大堆的最大值小，则将堆的最大值替换成此元素，然后再重新构造成最大堆
+            if (item < maxHeap[1]) {
+                addToTop(item, maxHeap);
+            }
+        }
+    }
+
+    function insert(item, heap) {
+        heap.push(item);
+        let index = heap.length - 1;
+        while (heap[index] > heap[parseInt(index / 2)]) {
+            let temp = heap[index];
+            heap[index] = heap[parseInt(index / 2)];
+            heap[parseInt(index / 2)] = temp;
+            index = parseInt(index / 2);
+        }
+    }
+
+    function addToTop(item, heap) {
+        heap[1] = item;
+        let index = 1;
+        while (true) {
+            if (heap[2 * index] === undefined) {
+                break;
+            }
+            if (heap[2 * index + 1] === undefined) {
+                if (heap[2 * index] < heap[index]) {
+                    break;
+                }
+                let temp = heap[2 * index];
+                heap[2 * index] = heap[index];
+                heap[index] = temp;
+                index = 2 * index;
+            } else {
+                if (heap[2 * index] < heap[index] && heap[2 * index + 1] < heap[index]) {
+                    break;
+                }
+                if (heap[2 * index] > heap[2 * index + 1]) {
+                    let temp = heap[2 * index];
+                    heap[2 * index] = heap[index];
+                    heap[index] = temp;
+                    index = 2 * index;
+                } else {
+                    let temp = heap[2 * index + 1];
+                    heap[2 * index + 1] = heap[index];
+                    heap[index] = temp;
+                    index = 2 * index + 1;
+                }
+            }
+        }
+    }
+    maxHeap.shift();
+    return maxHeap;
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n\log k)O(nlogk)，其中 nn 是数组 arr 的长度。由于大根堆实时维护前 kk 小值，所以插入删除都是 O(\log k)O(logk) 的时间复杂度，最坏情况下数组里 nn 个数都会插入，所以一共需要 O(n\log k)O(nlogk) 的时间复杂度。
+
+空间复杂度：O(k)O(k)，因为大根堆里最多 kk 个数。
+
+
+
+#### 快排思想
+
+我们可以借鉴快速排序的思想。我们知道快排的划分函数每次执行完后都能将数组分成两个部分，小于等于分界值 pivot 的元素的都会被放到数组的左边，大于的都会被放到数组的右边，然后返回分界值的下标。与快速排序不同的是，快速排序会根据分界值的下标递归处理划分的两侧，而这里我们只处理划分的一边。
+
+我们定义函数 randomized_selected(arr, l, r, k) 表示划分数组 arr 的 [l,r] 部分，使前 k 小的数在数组的左侧，在函数里我们调用快排的划分函数，假设划分函数返回的下标是 pos（表示分界值 pivot 最终在数组中的位置），即 pivot 是数组中第 pos - l + 1 小的数，那么一共会有三种情况：
+
+如果 pos - l + 1 == k，表示 pivot 就是第 kk 小的数，直接返回即可；
+
+如果 pos - l + 1 < k，表示第 kk 小的数在 pivot 的右侧，因此递归调用 randomized_selected(arr, pos + 1, r, k - (pos - l + 1))；
+
+如果 pos - l + 1 > k，表示第 kk 小的数在 pivot 的左侧，递归调用 randomized_selected(arr, l, pos - 1, k)。
+
+函数递归入口为 randomized_selected(arr, 0, arr.length - 1, k)。在函数返回后，将前 k 个数放入答案数组返回即可。
+
+
+
+```java
+class Solution {
+    public int[] getLeastNumbers(int[] arr, int k) {
+        randomizedSelected(arr, 0, arr.length - 1, k);
+        int[] vec = new int[k];
+        for (int i = 0; i < k; ++i) {
+            vec[i] = arr[i];
+        }
+        return vec;
+    }
+
+    private void randomizedSelected(int[] arr, int l, int r, int k) {
+        if (l >= r) {
+            return;
+        }
+        int pos = randomizedPartition(arr, l, r);
+        int num = pos - l + 1;
+        if (k == num) {
+            return;
+        } else if (k < num) {
+            randomizedSelected(arr, l, pos - 1, k);
+        } else {
+            randomizedSelected(arr, pos + 1, r, k - num);
+        }
+    }
+
+    // 基于随机的划分
+    private int randomizedPartition(int[] nums, int l, int r) {
+        int i = new Random().nextInt(r - l + 1) + l;
+        swap(nums, r, i);
+        return partition(nums, l, r);
+    }
+
+    private int partition(int[] nums, int l, int r) {
+        int pivot = nums[r];
+        int i = l - 1;
+        for (int j = l; j <= r - 1; ++j) {
+            if (nums[j] <= pivot) {
+                i = i + 1;
+                swap(nums, i, j);
+            }
+        }
+        swap(nums, i + 1, r);
+        return i + 1;
+    }
+
+    private void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+
+```
+
+
+
+---
+
+## **BM47** **寻找第K大**
+
+给定整数数组 nums 和整数 k，请返回数组中第 k 个最大的元素。
+
+请注意，你需要找的是数组排序后的第 k 个最大的元素，而不是第 k 个不同的元素。
+
+你必须设计并实现时间复杂度为 O(n) 的算法解决此问题。
+
+#### 基于快速排序的选择方法
+
+
+
+![基于快速排序的选择方法寻找第K大](E:\pogject\学习笔记\image\niuke\基于快速排序的选择方法寻找第K大.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var findKthLargest = function(nums, k) {
+    // write code here
+    const n = nums.length;
+    return quickSelect(nums, 0, n - 1, n - k);
+}
+
+const quickSelect = (nums, left, right, index) => {
+    const q = randomPartition(nums, left, right);
+    // console.log(q, nums)
+    if (q === index) {
+        // 我们会对子数组进行划分，如果划分得到的 qq 正好就是我们需要的下标，就直接返回 a[q]a[q]
+        return nums[q];
+    } else if (q < index){
+        // 否则，如果 qq 比目标下标小，就递归右子区间
+        return quickSelect(nums, q + 1, right, index);
+    } else {
+        // 否则递归左子区间
+        return quickSelect(nums, left, q - 1, index);
+    }
+}
+
+const randomPartition = (nums, left, right) => {
+    const randomIndex = left + Math.floor(Math.random() * (right - left));
+    swap(nums, randomIndex, right);
+    return partition(nums, left, right);
+}
+
+const partition = (nums, left, right) => {
+    const x = nums[right];
+    let i = left - 1;
+    for (let j = left; j < right; j++) {
+        if (nums[j] <= x) {
+            // 把小于等基准值的移到左边
+            swap(nums, ++i, j);
+        }
+    }
+    swap(nums, i + 1, right);
+    return i + 1;
+}
+
+const swap = (nums, i, j) => {
+    [nums[i], nums[j]] = [nums[j], nums[i]];
+}
+
+let nums = [3,2,1,5,6,4], k = 2;
+console.log(findKthLargest(nums, k));
+
+```
+
+复杂度分析
+
+时间复杂度：O(n)O(n)，如上文所述，证明过程可以参考「《算法导论》9.2：期望为线性的选择算法」。
+空间复杂度：O(\log n)O(logn)，递归使用栈空间的空间代价的期望为 O(\log n)O(logn)。
+
+
+
+
+
+#### 基于堆排序的选择方法
+
+我们也可以使用堆排序来解决这个问题——建立一个大根堆，做 k - 1*k*−1 次删除操作后堆顶元素就是我们要找的答案。
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+*/
+var findKthLargest = function(nums, k) {
+	//从nums中取出前k个数，构建一个小顶锥
+	let heapSize = nums.length;
+	bulidMaxHeap(nums, heapSize);
+	for (let i = nums.length - 1; i >= nums.length - k + 1; i--){
+		swap(nums, 0, i);
+		heapSize--;
+		maxHeapify(nums,0,heapSize);
+	}
+	return nums[0];  //返回堆顶元素
+};
+
+// 原地建堆，从后往前，自上而下式建小顶堆
+var bulidMaxHeap = (arr, heapSize)=>{
+	for (let i=Math.floor(heapSize/2); i >= 0; i--){
+		maxHeapify(arr,i,heapSize);
+	}
+}
+
+//堆化
+var maxHeapify = (arr, i, heapSize)=>{
+	let left = i*2 + 1;
+	let right = i*2 + 2;
+	let largest = i;
+	if (left < heapSize && arr[left] > arr[largest]) {
+		largest = left;
+	}
+	if (right < heapSize && arr[right] > arr[largest]) {
+		largest = right;
+	}
+
+	if (largest !== i) {
+		swap(arr, i, largest);
+		maxHeapify(arr, largest, heapSize);
+	}
+}
+
+//交换元素
+var swap=(arr,i,j)=>{
+	let temp=arr[i];
+	arr[i]=arr[j];
+	arr[j]=temp;
+}
+
+let test=[3,2,3,1,2,4,5,5,6],k=4;
+console.log(findKthLargest(test,k));  //
+```
+
+复杂度分析
+
+时间复杂度：O(n \log n)O(nlogn)，建堆的时间代价是 O(n)O(n)，删除的总代价是 O(k \log n)O(klogn)，因为 k < nk<n，故渐进时间复杂为 O(n + k \log n) = O(n \log n)O(n+klogn)=O(nlogn)。
+空间复杂度：O(\log n)O(logn)，即递归使用栈空间的空间代价。
+
+
+
+----
+
+## **BM48** **数据流中的中位数**
+
+中位数是有序列表中间的数。如果列表长度是偶数，中位数则是中间两个数的平均值。
+
+例如，
+
+[2,3,4] 的中位数是 3
+
+[2,3] 的中位数是 (2 + 3) / 2 = 2.5
+
+设计一个支持以下两种操作的数据结构：
+
+void addNum(int num) - 从数据流中添加一个整数到数据结构中。
+double findMedian() - 返回目前所有元素的中位数。
+
+进阶:
+
+如果数据流中所有整数都在 0 到 100 范围内，你将如何优化你的算法？
+如果数据流中 99% 的整数都在 0 到 100 范围内，你将如何优化你的算法？
+
+进阶： 空间复杂度 O(n) \*O*(*n*) ， 时间复杂度 O(nlogn) \*O*(*n**l**o**g**n*) 
+
+
+
+#### 优先队列
