--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19772,6 +19772,51 @@ var defangIPaddr = function(address) {
 
 
 
+----
+
+## 1143. 最长公共子序列
+
+给定两个字符串 text1 和 text2，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 0 。
+
+一个字符串的 子序列 是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
+
+例如，"ace" 是 "abcde" 的子序列，但 "aec" 不是 "abcde" 的子序列。
+两个字符串的 公共子序列 是这两个字符串所共同拥有的子序列。
+
+ ![最长公共子序列](E:\pogject\学习笔记\image\niuke\最长公共子序列.png)
+
+```js
+/**
+ * @param {string} text1
+ * @param {string} text2
+ * @return {number}
+ */
+var longestCommonSubsequence = function(text1, text2) {
+	const m = text1.length, n = text2.length;
+	const dp = new Array(m + 1).fill(0).map(() => new Array(n + 1).fill(0));
+
+	for (let i = 1; i <= m; i++) {
+		const c1 = text1[i - 1];
+		for (let j = 1; j <= n; j++) {
+			const c2 = text2[j - 1];
+			if (c1 === c2) {
+				dp[i][j] = dp[i - 1][j - 1] + 1;
+			} else {
+				dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+			}
+		}
+	}
+	return dp[m][n];
+};
+
+let text1 = "abcde", text2 = "ace" ;
+console.log(longestCommonSubsequence(text1, text2));
+```
+
+
+
+
+
 
 ---
 ## 1154.  一年中的第几天
