--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -893,6 +893,28 @@ js数据类型
 
 
 
+----
+
+## 8.13美团笔试
+
+送一个外卖需要5分钟，给定外卖的最晚送达时间的数组，最多送多少外卖
+
+```
+[3, 5, 7, 7, 8, 10, 11,15]
+```
+
+
+
+还原扑克牌顺序
+
+两个人各抽一张到最下面，然后翻开最上面的一张，循环直达翻完，得到一个翻开的顺序，求原始顺序
+
+```
+[1, 2, 3, 4, 5]
+```
+
+
+
 -----
 
 ## 8.15 百度面试
@@ -1291,4 +1313,8 @@ console.log(5);
 ```
 [[1, 2, 3], [3], [3], [4], []]
 ```
+
+
+
+----
 
