--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -3186,3 +3186,270 @@ double findMedian() - 返回目前所有元素的中位数。
 
 
 #### 优先队列
+
+我们用两个优先队列 \textit{queMax}queMax 和 \textit{queMin}queMin 分别记录大于中位数的数和小于等于中位数的数。当累计添加的数的数量为奇数时，\textit{queMin}queMin 中的数的数量比 \textit{queMax}queMax 多一个，此时中位数为 \textit{queMin}queMin 的队头。当累计添加的数的数量为偶数时，两个优先队列中的数的数量相同，此时中位数为它们的队头的平均值。
+
+当我们尝试添加一个数 \textit{num}num 到数据结构中，我们需要分情况讨论：
+
+\textit{num} \leq \max \{\textit{queMin}\}num≤max{queMin}
+
+此时 \textit{num}num 小于等于中位数，我们需要将该数添加到 \textit{queMin}queMin 中。新的中位数将小于等于原来的中位数，因此我们可能需要将 \textit{queMin}queMin 中最大的数移动到 \textit{queMax}queMax 中。
+
+\textit{num} > \max \{\textit{queMin}\}num>max{queMin}
+
+此时 \textit{num}num 大于中位数，我们需要将该数添加到 \textit{queMin}queMin 中。新的中位数将大于等于原来的中位数，因此我们可能需要将 \textit{queMax}queMax 中最小的数移动到 \textit{queMin}queMin 中。
+
+特别地，当累计添加的数的数量为 00 时，我们将 \textit{num}num 添加到 \textit{queMin}queMin 中。
+
+为了方便维护数组的顺序，很明显需要利用堆来存储，而要找到中位数，需要构造两个堆：一个最大堆存储较小的部分，一个最小堆存储较大的部分。如此一来，只需读取堆顶元素就能获得中位数。维护两个堆的方式也很简单，就是保持最大堆的长度与最小堆的长度之差在1以内，封装成优先队列的形式控制元素的压入与推出。
+
+
+
+```js
+/**
+ * initialize your data structure here.
+ */
+var MedianFinder = function() {
+    this.max_queue = new max_priority_queue();
+    this.min_queue = new min_priority_queue();
+};
+
+/** 
+ * @param {number} num
+ * @return {void}
+ */
+MedianFinder.prototype.addNum = function(num) {
+    this.max_queue.enqueue(num);
+    if (this.max_queue.head() === num || this.max_queue.size() - this.min_queue.size() > 1) {
+        this.min_queue.enqueue(this.max_queue.dequeue());
+    }
+    if (this.max_queue.size() - this.min_queue.size() < 0) {
+        this.max_queue.enqueue(this.min_queue.dequeue());
+    }
+};
+
+/**
+ * @return {number}
+ */
+MedianFinder.prototype.findMedian = function() {
+    return this.max_queue.size() > this.min_queue.size() ? this.max_queue.head() : (this.max_queue.head() + this.min_queue.head()) / 2;
+};
+
+/**
+ * Your MedianFinder object will be instantiated and called as such:
+ * var obj = new MedianFinder()
+ * obj.addNum(num)
+ * var param_2 = obj.findMedian()
+ */
+
+// 构造最大堆
+class MaxHeap {
+    constructor(array = []) {
+        this.A = array;
+    }
+    size() {
+        return this.A.length;
+    }
+    head() {
+        return this.isEmpty() ? null : this.A[0];
+    }
+    left(i) {
+        return 2 * i + 1;
+    }
+    right(i) {
+        return 2 * i + 2;
+    }
+    parent(i) {
+        return i > 0 ? (i - 1) >>> 1 : -1;
+    }
+    isEmpty() {
+        return this.size() === 0;
+    }
+    heapifyDown(i, size = this.size()) {
+        let p = i;
+        const l = this.left(i), r = this.right(i);
+        if (l < size && this.compare(l, p)) {
+            p = l;
+        }
+        if (r < size && this.compare(r, p)) {
+            p = r;
+        }
+        if (p !== i) {
+            this.exchange(i, p);
+            this.heapifyDown(p, size);
+        }
+    }
+    heapifyUp(i) {
+        const p = this.parent(i);
+        if (p >= 0 && this.compare(i, p)) {
+            this.exchange(i, p);
+            this.heapifyUp(p);
+        }
+    }
+    exchange(x, y) {
+        const temp = this.A[x];
+        this.A[x] = this.A[y];
+        this.A[y] = temp;
+    }
+    compare(a, b) {
+        if (this.A[a] - this.A[b] > 0) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+}
+
+// 优先队列
+class max_priority_queue extends MaxHeap {
+    enqueue(node) {
+        this.A.push(node);
+        this.heapifyUp(this.size() - 1);
+    }
+    dequeue() {
+        const first = this.A[0];
+        const last = this.A.pop();
+        if (first !== last) {
+            this.A[0] = last;
+            this.heapifyDown(0);
+        }
+        return first;
+    }
+}
+
+class min_priority_queue extends max_priority_queue {
+    compare(a, b) {
+        if (this.A[a] - this.A[b] < 0) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+}
+```
+
+
+
+#### 有序集合 + 双指针
+
+我们也可以使用有序集合维护这些数。我们把有序集合看作自动排序的数组，使用双指针指向有序集合中的中位数元素即可。当累计添加的数的数量为奇数时，双指针指向同一个元素。当累计添加的数的数量为偶数时，双指针分别指向构成中位数的两个数。
+
+当我们尝试添加一个数 \textit{num}num 到数据结构中，我们需要分情况讨论：
+
+初始有序集合为空时，我们直接让左右指针指向 \textit{num}num 所在的位置。
+
+有序集合为中元素为奇数时，\textit{left}left 和 \textit{right}right 同时指向中位数。如果 \textit{num}num 大于等于中位数，那么只要让 \textit{left}left 左移，否则让 \textit{right}right 右移即可。
+
+有序集合为中元素为偶数时，\textit{left}left 和 \textit{right}right 分别指向构成中位数的两个数。
+
+当 \textit{num}num 成为新的唯一的中位数，那么我们让 \textit{left}left 右移，\textit{right}right 左移，这样它们即可指向 \textit{num}num 所在的位置；
+当 \textit{num}num 大于等于 \textit{right}right，那么我们让 \textit{left}left 右移即可；
+当 \textit{num}num 小于 \textit{right}right 指向的值，那么我们让 \textit{right}right 左移，注意到如果 \textit{num}num 恰等于 \textit{left}left 指向的值，那么 \textit{num}num 将被插入到 \textit{left}left 右侧，使得 \textit{left}left 和 \textit{right}right 间距增大，所以我们还需要额外让 \textit{left}left 指向移动后的 \textit{right}right。
+
+**代码有问题**
+
+```js
+/**
+ * initialize your data structure here.
+ */
+var MedianFinder = function() {
+    this.queue = [];
+    // 用两个指针维护中位数
+    this.left = -1;
+    this.right = -1;
+};
+
+/** 
+ * @param {number} num
+ * @return {void}
+ */
+MedianFinder.prototype.addNum = function(num) {
+    // 第一个数加进来
+    if (this.left === -1) {
+        this.left++;
+        this.right++;
+    } else {
+        //  加入num后队列长度变为偶数，中位数由两个(下标)不同的数计算得出
+        if (this.left === this.right) {
+            this.right++;
+        } else {
+            this.left++;
+        }
+    }
+    this.queue.push(num);
+};
+
+/**
+ * @return {number}
+ */
+MedianFinder.prototype.findMedian = function() {
+    if (!this.queue.length) {
+        return null;
+    }
+    this.queue.sort((a, b) => a - b);
+    return (this.queue[this.left] + this.queue[this.right]) / 2;
+};
+
+/**
+ * Your MedianFinder object will be instantiated and called as such:
+ * var obj = new MedianFinder()
+ * obj.addNum(num)
+ * var param_2 = obj.findMedian()
+ */
+
+```
+
+
+
+----
+
+## **BM49** **表达式求值**
+
+请写一个整数计算器，支持加减乘三种运算和括号。
+
+数据范围：0\le |s| \le 1000≤∣*s*∣≤100，保证计算结果始终在整型范围内
+
+要求：空间复杂度： O(n)*O*(*n*)，时间复杂度 O(n)*O*(*n*)
+
+
+
+#### eval
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 返回表达式的值
+ * @param s string字符串 待计算的表达式
+ * @return int整型
+ */
+function solve( s ) {
+    // write code here
+    return eval(s);
+}
+module.exports = {
+    solve : solve
+};
+```
+
+#### 转为逆波兰表达式
+
+将中缀表达式化为逆波兰表达式
+
+借助两个栈，一个存放数字，一个存放操作符
+
+思路：
+
+**初始化：**
+
+- 将运算符加入到map里面，设定优先级，注意`(`的优先级最低
+- 将字符串的空格删除
+
+**遍历字符串：**
+
+- 数字：加入数组，注意数字可能占多位
+- 左括号：直接`push`到`ops`栈
+- 右括号：从nums栈pop两个数字，进行运算，运算的结果push回nums栈，直至碰到`(`
+- 其他运算符：
+  1. 如果当前运算符的优先级≤\leq≤ops的最后一个，一直运算(例子：5*2+3，碰到+的时候计算5*2)
+  2. 如果当前运算符的>>>ops的最后一个，将运算符push到ops(例子：5+2*3，碰到*的时候将`*`push到ops栈)
+
